--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
@@ -14,14 +14,14 @@
             %sup
               &#8482;
           %br
-          a new gift-giving site dedicated better gifting with artisanal items, memorable experiences and funds for your wish-lists in life.
+          a new gift-giving site dedicated to better gifting with artisanal items, memorable experiences and funds for your wish-lists in life.
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
-          #{@profile.owner.first_name || 'He'}, together with curators from Wrapt
+          #{@profile.owner.first_name || 'They'}, together with curators from Wrapt
           =succeed ', ' do
             %sup
               &#8482;
-          chose gifts for you based on answers he gave to a short quiz regarding your personality, passions and purpose.
+          chose gifts for you based on answers they gave to a short quiz regarding your personality, passions and purpose.
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
           He (as well as we!) would love to know what you think about these gifts he chose. 
