--- a/app/views/password_reset_requests_mailer/reset_password_email.text.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.text.haml
@@ -1,5 +1,9 @@
-Reset Your Wrapt Password
+Hello from Wrapt,
 
-Please use the following link to reset your wrapt password:
+We got a request to send you an email so you can reset your Wrapt password.
 
-link_to @reset_password_url, @reset_password_url
+Click here to reset:
+=@reset_password_url
+
+Sincerely,
+Team Wrapt
