--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -31,7 +31,7 @@
 
         .new-quiz__about-step.step-1.left
           %h4.light Tell Us About Her
-          %p Answer a few questions about her personality, passions and purpose.
+          %p Answer a few questions about her personality, passions, and purpose.
 
         .new-quiz__about-step.step-2.right
           %h4.light We Suggests the Gifts She’ll Love
