--- a/app/views/user_activations_mailer/activation_needed_email.text.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.text.haml
@@ -1,6 +1,15 @@
-WRAPT
+You're invited to try WRAPT
 =====
 
-You're invited to try WRAPT.  To sign up click here:
+Wrapt is a new gift-giving site dedicated to better gifting with artisanal items, memorable experiences and funds for wish lists in life.
+_________________
+How it Works:
+* You answer a few questions about her personality, passions, and purpose.
+* Based on your answers, we then match her with gifts from our curated collection.
+* She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
 
-link_to @activation_url, @activation_url
+_________________
+For now, we're just testing and not sending actual gifts.
+We'd love your help! Try Wrapt now:
+
+= @activation_url
