--- a/app/views/gift_recommendations/_thumbnail.haml
+++ b/app/views/gift_recommendations/_thumbnail.haml
@@ -1,3 +1,3 @@
 %span.gr__indicator-thumbnail
   %span.gr__indicator-inactive-overlay
-  = image_tag locals[:image]&.image_url(:small), alt: locals[:gift].title, class: "orientation-#{locals[:image].orientation}"
+  = image_tag locals[:image]&.image_url(:small), alt: locals[:gift].title, class: "orientation-#{locals[:image].orientation}", onClick: "ga('send', 'event', 'recommendation', 'navigation', 'gift thumbnail');"
