more google analytics tracking

--- a/app/views/giftee_invitations/new.haml
+++ b/app/views/giftee_invitations/new.haml
@@ -11,4 +11,4 @@
 = simple_form_for @profile, url: profile_giftee_invitations_path(@profile), data: {submits_to_pjax_modal: true}, method: :post do |form|
   = form.input :email, label: 'Email Address'
 
-  = form.submit "Send Email", class: 'btn btn-primary btn-full-width'
+  = form.submit "Send Email", class: 'btn btn-primary btn-full-width', onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 2 - send');"
