--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,6 +4,7 @@
     %title Wrapt
     %meta{name: "viewport", content: "width=device-width"}
     %meta{content: "IE=edge", "http-equiv": "X-UA-Compatible"}
+    = render 'layouts/google_analytics'
     = csrf_meta_tags
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
