--- a/app/views/admin/reports/index.haml
+++ b/app/views/admin/reports/index.haml
@@ -15,11 +15,28 @@
       
 %table.table
   %tbody
-    - @report.profile_ids.each do |id|
-      - profile = @report.profiles[id]
+    - @report.sorted_profile_ids.each do |id|
+      - profile = @report.preloaded_profiles[id]
+      - next if profile.blank?
       %tr.active
-        %th{colspan: 3}= profile.owner.email
-      %tr
-        %td
-        %td event time
-        %td event description
+        %th{colspan: 3}
+          = profile.owner.email
+          - if profile.name.present?
+            for #{profile.name}
+      :ruby
+        events = @report.events[id]
+        if events.detect{|e| e[:type] == 'survey_completed'}
+          events.reject!{|e| e[:type] == 'question_answered'}
+        end
+      - events.each do |event|
+        %tr
+          %td
+          %td= event[:ts].strftime('%m/%d/%Y %I:%M %p')
+          %td
+            - if event[:type] == 'question_answered' 
+              Last question answered:
+              - question = @report.preloaded_questions[event[:question_id]]
+              - if question.present?
+                '#{truncate(question.prompt, length: 40)}'
+            - else
+              = event[:type].humanize
