--- a/app/views/admin/reports/index.haml
+++ b/app/views/admin/reports/index.haml
@@ -1,4 +1,6 @@
-%h2 Reports
+.row
+  .col-sm-12
+    %h1 Reports
 
 :ruby
   week_options = (0..10).map do |weeks_ago|
@@ -7,36 +9,58 @@
     ["#{begin_date} - #{end_date}", weeks_ago]
   end
 
-.well
-  = form_tag admin_reports_path, method: :get, class: 'form-inline' do
-    .form-group
-      %label User activity for the week of:
-      = select_tag :weeks_ago, options_for_select(week_options, @weeks_ago), onchange: "this.form.submit();"
-      
-%table.table
-  %tbody
-    - @report.sorted_profile_ids.each do |id|
-      - profile = @report.preloaded_profiles[id]
-      - next if profile.blank?
-      %tr.active
-        %th{colspan: 3}
-          = profile.owner.email
-          - if profile.name.present?
-            for #{profile.name}
-      :ruby
-        events = @report.events[id]
-        if events.detect{|e| e[:type] == 'survey_completed'}
-          events.reject!{|e| e[:type] == 'question_answered'}
-        end
-      - events.each do |event|
-        %tr
-          %td
-          %td= event[:ts].strftime('%m/%d/%Y %I:%M %p')
-          %td
-            - if event[:type] == 'question_answered' 
-              Last question answered:
-              - question = @report.preloaded_questions[event[:question_id]]
-              - if question.present?
-                '#{truncate(question.prompt, length: 40)}'
-            - else
-              = event[:type].humanize
+.row
+  .col-sm-12
+    .well
+      = form_tag admin_reports_path, method: :get, class: 'form-inline' do
+        .form-group
+          %label User activity for the week of:
+          = select_tag :weeks_ago, options_for_select(week_options, @weeks_ago), onchange: "this.form.submit();"
+
+.row
+  .col-sm-2 Profiles Created: #{@report.stats[:profiles_created][:count]}
+  .col-sm-2 Surveys Completed: #{@report.stats[:surveys_completed][:count]}
+  .col-sm-2 Gifts Added to Cart: #{@report.stats[:gifts_selected][:count]}
+  .col-sm-2 Disliked Gifts: #{@report.stats[:gifts_disliked][:count]}
+
+%hr
+%h5 Activity Details
+.row
+  .col-sm-12
+    %table.table
+      %tbody
+        - @report.sorted_profile_ids.each do |id|
+          - profile = @report.preloaded_profiles[id]
+          - next if profile.blank?
+          %tr.active
+            %th{colspan: 3}
+              = profile.owner.email
+              - if profile.name.present?
+                for #{profile.name}
+          :ruby
+            events = @report.events[id]
+            if events.detect{|e| e[:type] == 'survey_completed'}
+              events.reject!{|e| e[:type] == 'question_answered'}
+            end
+          - events.each do |event|
+            %tr
+              %td
+              %td= event[:ts].strftime('%m/%d/%Y %I:%M %p')
+              %td
+                - if event[:type] == 'question_answered' 
+                  Last question answered:
+                  - question = @report.preloaded_questions[event[:question_id]]
+                  - if question.present?
+                    '#{truncate(question.prompt, length: 40)}'
+                - if event[:type] == 'gift_selected' 
+                  Gift added to basket:
+                  - gift = @report.preloaded_gifts[event[:gift_id]]
+                  - if gift.present?
+                    '#{truncate(gift.title, length: 40)}' (#{gift.wrapt_sku})
+                - if event[:type] == 'gift_disliked' 
+                  Disliked gift:
+                  - gift = @report.preloaded_gifts[event[:gift_id]]
+                  - if gift.present?
+                    '#{truncate(gift.title, length: 40)}' (#{gift.wrapt_sku})
+                - else
+                  = event[:type].humanize
