get landing page ready for public

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -3,7 +3,8 @@
     .col-xs-10.col-xs-offset-1
       .hero-overlay
         %h2.light Launching Soon!
-        %p.light Enter your Email Address below to be notified when you too can start giving better gifts based on her unique personality, passions, and purpose.
+        %p.light
+          This site is currently in a closed beta.
       
       .hero-overrun
         - if current_user&.admin?
