change button text

--- a/app/views/recipient_gift_selections/_gift_basket.haml
+++ b/app/views/recipient_gift_selections/_gift_basket.haml
@@ -18,7 +18,7 @@
         the better the gifting gets.
       
 
-      = link_to 'SHARE IT NOW', new_profile_recipient_originated_referral_path(profile.recipient_access_token), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}
+      = link_to 'SHARE WRAPT NOW', new_profile_recipient_originated_referral_path(profile.recipient_access_token), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}
 
       
 
